deploy/manual/3.kuard/1.1.kuard-k8s-first.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard-k8s-first
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: kuard-k8s-first
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard-k8s-first
spec:
  selector:
    matchLabels:
      app: kuard-k8s-first
  replicas: 1
  template:
    metadata:
      labels:
        app: kuard-k8s-first
    spec:
      containers:
        - name: kuard-container
          image: gcr.io/kuar-demo/kuard-amd64:1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      nodeSelector:
        kubernetes.io/hostname: master-01.kakde.eu
