deploy/manual/3.kuard/2.kuard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard-k8s-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "kuard1.kakde.eu"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: kuard-k8s-first
                port:
                  number: 80
    - host: "kuard2.kakde.eu"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: kuard-k8s-second
                port:
                  number: 80
