deploy/manual/3.kuard/4.kuard-ingress-with-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard-k8s-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - kuard1.kakde.eu
      - kuard2.kakde.eu
      secretName: kuard-k8s-tls
  rules:
    - host: "kuard1.kakde.eu"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: kuard-k8s-first
                port:
                  number: 80
    - host: "kuard2.kakde.eu"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: kuard-k8s-second
                port:
                  number: 80
